<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/i"
        android:orientation="vertical"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="192dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/u" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:onClick="Log"
                android:text="@string/d1"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:onClick="Creat"
                android:text="@string/d2"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/d3"
                android:textSize="26sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/d4"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteY="367dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linaer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/d5"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/user" />

                    <EditText
                        android:id="@+id/ett1"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="5dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/d6"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/pass" />

                    <EditText
                        android:id="@+id/ett2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded"
                        android:ems="10"
                        android:inputType="numberPassword"
                        android:padding="5dp"
                        tools:layout_editor_absoluteX="98dp"
                        tools:layout_editor_absoluteY="521dp" />

                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:checked="true"
                android:text="@string/d17"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button3"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/a"
                android:onClick="log_1"
                android:text="@string/d1"
                android:textStyle="bold|italic" />

            <ProgressBar
                android:id="@+id/progress"
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>