<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creat">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/i"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/d7"
                    android:textSize="26sp"
                    android:textStyle="bold|italic" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vb" />

                <LinearLayout
                    android:id="@+id/linaer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="270dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/d8"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/rounded"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/email" />

                            <EditText
                                android:id="@+id/et1"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/rounded"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:padding="5dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="270dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/d5"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            tools:ignore="DuplicateIds" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/rounded"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/user" />

                            <EditText
                                android:id="@+id/et2"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/rounded"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:padding="5dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="270dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/d6"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/rounded"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/pass" />

                            <EditText
                                android:id="@+id/et3"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginBottom="15dp"
                                android:layout_weight="1"
                                android:background="@drawable/rounded"
                                android:ems="10"
                                android:inputType="numberPassword"
                                android:padding="5dp"
                                tools:layout_editor_absoluteX="98dp"
                                tools:layout_editor_absoluteY="521dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <RadioButton
                                    android:id="@+id/rb1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/d10"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <RadioButton
                                    android:id="@+id/rb2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/d11"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </RadioGroup>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="80dp"
                            android:layout_marginRight="80dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/d12"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <Spinner
                                android:id="@+id/sp"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_gravity="left"
                                android:layout_weight="1" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="-10dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="80dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView52"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/d13"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/sp1"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_gravity="left"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/ch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:checked="true"
                        android:text="@string/d17"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/a"
                        android:onClick="Creat"
                        android:text="@string/d9"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <ProgressBar
                        android:id="@+id/progress"
                        style="@android:style/Widget.ProgressBar.Small.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:visibility="invisible" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>